--- a/stories.html
+++ b/stories.html
@@ -137,6 +137,7 @@
       gap: 1rem;
       flex-wrap: wrap;
       margin-top: 0.5rem;
+      justify-content: center; /* CENTER the buttons */
     }
     .btn {
       background-color: var(--cyan);
@@ -314,10 +315,7 @@
   <section class="page-intro">
     <div class="intro-inner">
       <h1 class="gradient-heading">Featured Fiction</h1>
-      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline—neon skylines, ghost signals, chrome hearts.
-         This page collects standout stories in one place so you can jump straight into the good stuff.</p>
-      <p>We refresh the lineup periodically to surface new voices and returning favorites. If you’re a writer working
-         in near-future worlds, glitch-bright aesthetics, or human stories in machine cities, we’d love to read your work.</p>
+      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline.This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like.</p>
       <div class="intro-actions">
         <a class="btn" href="submit.html">Submit Your Story</a>
         <a class="btn btn-ghost" href="fiction.html">Browse All Issues</a>
